--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>mbtiles server map test</title>
+    <title>servembtiles.py test map</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 </head>
@@ -11,8 +11,10 @@
 
     <script>
         var map = L.map('map').setView([35.6895, 139.6917], 14); // adjust to appropriate area your map covers.
+        // IP:PORT configured for test server defaults
+        // Update as necessary
         L.tileLayer(
-            'http://localhost:8005/{z}/{x}/{y}.png', { // update to use the address:port where items are served.
+            'http://localhost:8005/{z}/{x}/{y}.png', {
             attribution: '&copy; Attribution Here',
             maxZoom: 18,
             tms: true, // note mbtiles are in TMS, this must be set to 'true'.
