--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 </head>
 <body>
-    <div id="map" style="width: 600px; height: 400px"></div>
+    <div id="map" style="width: 100%; height: 500px"></div>
 
     <script>
         var map = L.map('map').setView([35.6895, 139.6917], 14); // adjust to appropriate area your map covers.
